# mydig

./: .gitignore  CMakeLists.txt  README.md
include/: dns.h  dns.hpp  serialization.h  serialization.hpp  socket.h  socket.hpp
src/: dns.cpp  main.cpp  socket.cpp
